tests/errors/invalid_uescape2.pyx

u'\u12'

_ERRORS = '''
2:2: Invalid unicode escape '\u'
'''
